--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,19 @@
-list of dependencies that need to be installed
-You can extract all packages from venv and save it into this requirements document
-
-pip freeze > requirements.txt
-
-https://learn.microsoft.com/en-us/visualstudio/python/managing-required-packages-with-requirements-txt?view=vs-2022
+attrs==22.1.0
+datatest==0.11.1
+DateTime==4.7
+exceptiongroup==1.0.4
+iniconfig==1.1.1
+numpy==1.23.5
+packaging==21.3
+pandas==1.5.2
+pluggy==1.0.0
+prettytable==3.5.0
+pyparsing==3.0.9
+pytest==7.2.0
+python-dateutil==2.8.2
+pytz==2022.6
+six==1.16.0
+termcolor==2.1.1
+tomli==2.0.1
+wcwidth==0.2.5
+zope.interface==5.5.2
